--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5"
   },
